--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 align="center"><u>My Resume</u></h1>
-    <img src="./profile.jpeg" height="300" alt="profile pic">
+    <img src="./profile.jpeg" height="300" align="center" alt="profile pic">
     <p>
         Hi! I am Aditya Garg, first year student at Delhi Technological university(DTU), Delhi, India.
         <br>
